# rteasy-online

./: DEVELOPMENT.md  README.md  asset-manifest.json  index.html
.github/workflows/: ci.yml  gh-pages.yml  pre-release.yml  test-vhdl.yml
app/: craco.config.js
app/src/: toaster.ts
app/src/components/: index.ts
backend/: Cargo.toml  README.md
backend/_lib/value/src/: slice.rs
backend/ast/: Cargo.toml
backend/ast/src/: lib.rs
backend/compiler/: Cargo.toml
backend/compiler-backend-simulator/: Cargo.toml
backend/compiler-backend-simulator/src/: concat.rs  declaration.rs  expression.rs  lib.rs  operation.rs  program.rs
backend/compiler-backend-vhdl/: Cargo.toml
backend/compiler-backend-vhdl/src/: concat.rs  declarations.rs  error.rs  expression.rs  lib.rs  operation.rs  statement.rs  vhdl.rs
backend/compiler-backend-vhdl/tests/: synth_error.rs  util.rs
backend/compiler/src/: error.rs  lib.rs  symbols.rs  util.rs
backend/compiler/src/build_mir/: declaration.rs  expression.rs  mod.rs  step.rs
backend/compiler/src/check_ast/: expression.rs  mod.rs  operation.rs  statements.rs
backend/compiler/src/check_mir/: case_values.rs  const_eval.rs  double_assign.rs  register_array_read.rs
backend/compiler/src/check_mir/ordering/: deps_direct.rs
backend/compiler/src/mir/: declaration.rs  expression.rs  impl_display.rs  mod.rs  operation.rs
backend/compiler/tests/: bit_range.rs  bit_range_too_wide.rs  condition_too_wide.rs  declaration.rs  double_assign.rs  double_goto.rs  feedback_loop.rs  ice.rs  input.rs  label.rs  memory.rs  options.rs  pipe.rs  register_array.rs  switch.rs  util.rs
backend/memory-file/: Cargo.toml
backend/memory-file/src/: lib.rs
backend/memory-file/tests/: parse.rs  to_string.rs
backend/parser/: Cargo.toml
backend/parser/src/: lexer.rs  lib.rs  rt_easy.toktok
backend/parser/tests/: numbers.rs  pretty_print_error.rs  util.rs
backend/program/: Cargo.toml
backend/program/src/: declaration.rs  expression.rs  impl_display.rs  lib.rs  operation.rs
backend/rt-easy/: Cargo.toml
backend/rt-easy/src/: lib.rs
backend/rtcore/: Cargo.toml
backend/rtcore/src/: common.rs
backend/simulator/: Cargo.toml
backend/simulator/examples/: mult.rs
backend/simulator/src/: changed.rs  evaluate.rs  execute.rs
backend/simulator/src/simulator/: impl_state_view.rs  impl_step.rs  mod.rs
backend/simulator/src/state/: bus.rs  memory.rs  mod.rs  util.rs
backend/simulator/tests/: add_sub_assoc.rs  assert.rs  bit_op.rs  breakpoints.rs  ctx_size.rs  goto.rs  input.rs  memory.rs  micro_step.rs  misc.rs  mul.rs  mult.rs  overflow.rs  reg_mem.rs  register_array.rs  signed_value.rs  simulator.rs  switch_case.rs  util.rs
backend/unit-test/: Cargo.toml
backend/unit-test/src/: run.rs
backend/unit-test/tests/: invalid_unit_test.rs  mult.rs  util.rs
backend/vhdl/: Cargo.toml
backend/vhdl/src/: lib.rs
backend/vhdl/src/impl_render/: memory_data.rs  mod.rs  template.vhdl
backend/vhdl/src/render_as_rt/: expression.rs
backend/vhdl/tests/: render.rs  render_error.rs  util.rs
book/: 404.html  README.md  appendix.html  book.toml  highlight.js  index.html  print.html  searchindex.js  searchindex.json
book/compiler-error-index/: errors.html
book/src/: README.md  appendix.md
book/src/files/: rrm-memory.rtmem
book/src/includes/: operators.md
book/test/: Cargo.toml
book/test/src/: main.rs
book/theme/: custom.css  highlight.js
book/tutorial/advanced/: eval-expressions.html  index.html  memory-file-format.html
book/tutorial/cli/: index.html
book/tutorial/examples/: easy-multiplier.html  index.html  register-register-machine.html
book/tutorial/ide/: editing-mode.html  index.html  simulation-mode.html  vhdl-export.html
book/tutorial/lang/: algorithm.html  declarations.html  expressions.html  index.html  micro-operations.html
cli/: Cargo.toml  README.md
cli/src/: commands.rs  lib.rs
cli/tests/: command_gen_vhdl.rs
dev/docs/backend/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/backend/: search-index.js  settings.html  source-files.js
docs/backend/pretty_error/: all.html  enum.Span.html  index.html
docs/backend/rt_easy/: index.html
docs/backend/rt_easy_ast/: enum.Atom.html  enum.BusKind.html  enum.Expression.html  enum.Lvalue.html  enum.NumberKind.html  enum.Operation.html  index.html  struct.Assert.html  (+22 more)
ide/: README.md  package-lock.json  package.json
src/rt-easy/: Cargo.toml
src/rt-easy-cli/: Cargo.toml
src/rt-easy-cli/src/: commands.rs
src/rt-easy-cli/tests/: MEM.rtmem  command_gen_vhdl.rs  mem.rt
src/rt-easy-compiler-backend-vhdl/: Cargo.toml
src/rt-easy-memory-file/: Cargo.toml
src/rt-easy-simulator/: Cargo.toml
src/rt-easy-vhdl/: Cargo.toml
static/js/: 0.64f13fe6.chunk.js  0.64f13fe6.chunk.js.map  0.fa8ca101.chunk.js  0.fa8ca101.chunk.js.map  1.3952a1e7.chunk.js  1.3952a1e7.chunk.js.map  1.4d26fcfa.chunk.js  1.4d26fcfa.chunk.js.map  10.72706eb2.chunk.js  10.72706eb2.chunk.js.map  10.d5b0510b.chunk.js  10.d5b0510b.chunk.js.map  11.22d41576.chunk.js  11.22d41576.chunk.js.map  11.592bc48e.chunk.js  11.592bc48e.chunk.js.map  12.b4195c9d.chunk.js  12.b4195c9d.chunk.js.map  12.bdfc6cba.chunk.js  12.bdfc6cba.chunk.js.map  13.6817a2a2.chunk.js  13.6817a2a2.chunk.js.map  13.721f15dd.chunk.js  13.721f15dd.chunk.js.map  14.097263af.chunk.js  14.097263af.chunk.js.map  14.6ea10dac.chunk.js  14.6ea10dac.chunk.js.map  15.9069ce8d.chunk.js  15.9069ce8d.chunk.js.map  15.e46e2fdd.chunk.js  15.e46e2fdd.chunk.js.map  16.2f16a1be.chunk.js  16.2f16a1be.chunk.js.map  16.945bdced.chunk.js  16.945bdced.chunk.js.map  17.0f0d0af4.chunk.js  17.0f0d0af4.chunk.js.map  17.7784a07b.chunk.js  17.7784a07b.chunk.js.map  (+343 more)
vhdl-tests/: Cargo.toml  README.md
vhdl-tests/src/: main.rs
vhdl-tests/testbenches/src/goto_cond_bus/: goto_cond_bus.rt  goto_cond_bus_tb.vhdl
vhdl-tests/testbenches/src/register_array/: register_array.rt  register_array_tb.vhdl
wasm/: Cargo.toml  README.md
wasm/src/: compiler.rs  simulator.rs  util.rs  vhdl.rs
web/rt-easy/: package.json
(+1347 files in other folders)
