[package]
name = "vhdl-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-file = { path = "../backend/memory-file" }
vhdl = { path = "../backend/vhdl" }
parser = { path = "../backend/parser" }
compiler = { path = "../backend/compiler" }
compiler-backend-vhdl = { path = "../backend/compiler-backend-vhdl" }

anyhow = "1.0.44"
