[package]
name = "compiler-backend-vhdl"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rtcore" }
vhdl = { path = "../vhdl" }
compiler = { path = "../compiler" }
pretty-error = { path = "../_lib/pretty-error" }

thiserror = "1.0.30"

[dev-dependencies]
parser = { path = "../parser" }
compiler = { path = "../compiler" }
