[package]
name = "test-code"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "../../backend/parser" }
compiler = { path = "../../backend/compiler" }
compiler-backend-simulator = { path = "../../backend/compiler-backend-simulator" }
compiler-backend-vhdl = { path = "../../backend/compiler-backend-vhdl" }
simulator = { path = "../../backend/simulator" }

once_cell = "1.9.0"
regex = "1.5.4"
anyhow = "1.0.44"
