[package]
name = "rt-easy-cli"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
rtvhdl = { path = "../rt-easy-vhdl", package = "rt-easy-vhdl" }
memory-file = { path = "../rt-easy-memory-file", package = "rt-easy-memory-file" }
parser = { path = "../rt-easy-parser", package = "rt-easy-parser" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }
compiler-backend-simulator = { path = "../rt-easy-compiler-backend-simulator", package = "rt-easy-compiler-backend-simulator" }
compiler-backend-vhdl = { path = "../rt-easy-compiler-backend-vhdl", package = "rt-easy-compiler-backend-vhdl" }
unit-test = { path = "../rt-easy-unit-test", package = "rt-easy-unit-test" }

structopt = "0.3.25"
anyhow = "1.0.44"
ansi_term = "0.12.1"

[dev-dependencies]
tempfile = "3.3.0"
